# python_boilerplate

./: .env.example  .pre-commit-config.yaml  Makefile  README.md  cookiecutter.json  howto.md  pyproject.toml  standards.md
app_alternatives/: README.md
app_alternatives/fasthtml/: __init__.py  main.py
app_alternatives/gradio/: __init__.py  main.py
app_alternatives/streamlit/: main.py
hooks/: post_gen_project.py  pre_gen_project.py
src/api/: __init__.py  main.py  schemas.py
src/app/: __init__.py  main.py
src/core/: __init__.py  hello.py
src/fastapi_app/: __init__.py  main.py
src/fasthtml_app/: __init__.py  main.py
src/gradio_app/: __init__.py  main.py
src/project_core/: __init__.py  config.py  hello.py  settings.py
src/streamlit_app/: main.py
tests/: __init__.py  conftest.py
tests/test_api/: test_main.py  test_schemas.py
tests/test_apps/: __init__.py
tests/test_apps/test_app/: test_main.py  test_schemas.py
tests/test_apps/test_fastapi/: test_main.py  test_schemas.py
tests/test_core/: __init__.py  test_hello.py  test_models.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  standards.md
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/src/app/: __init__.py  main.py  models.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __init__.py  config.py  hello.py  models.py
{{cookiecutter.project_slug}}/tests/test_app/: test_main.py  test_models.py
{{cookiecutter.project_slug}}/tests/test_core/: test_hello.py  test_models.py
